--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1221</width>
-    <height>670</height>
+    <height>665</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -126,10 +126,10 @@ QPushButton:hover{
      </widget>
     </widget>
     <widget class="QWidget" name="page_2">
-     <widget class="QPushButton" name="siftBtn">
+     <widget class="QPushButton" name="predictBtn">
       <property name="geometry">
        <rect>
-        <x>560</x>
+        <x>430</x>
         <y>450</y>
         <width>93</width>
         <height>41</height>
@@ -167,9 +167,9 @@ QPushButton:hover{
      <widget class="QWidget" name="horizontalLayoutWidget_4">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>10</y>
-        <width>921</width>
+        <x>260</x>
+        <y>20</y>
+        <width>471</width>
         <height>351</height>
        </rect>
       </property>
@@ -185,75 +185,7 @@ QPushButton:hover{
          </item>
         </layout>
        </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Maximum</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>15</width>
-           <height>10</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout">
-         <item>
-          <widget class="QLabel" name="imgSift">
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
       </layout>
-     </widget>
-     <widget class="QComboBox" name="comboBox">
-      <property name="geometry">
-       <rect>
-        <x>30</x>
-        <y>460</y>
-        <width>75</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <item>
-       <property name="text">
-        <string>otsu</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>optimal</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>multilevel</string>
-       </property>
-      </item>
-     </widget>
-     <widget class="QSlider" name="horizontalSlider">
-      <property name="geometry">
-       <rect>
-        <x>320</x>
-        <y>460</y>
-        <width>211</width>
-        <height>18</height>
-       </rect>
-      </property>
-      <property name="minimum">
-       <number>3</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
      </widget>
      <widget class="QLabel" name="slider_thres_val">
       <property name="geometry">
@@ -268,52 +200,26 @@ QPushButton:hover{
        <string/>
       </property>
      </widget>
-     <widget class="QRadioButton" name="global">
-      <property name="geometry">
-       <rect>
-        <x>130</x>
-        <y>420</y>
-        <width>107</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>global</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="local">
-      <property name="geometry">
-       <rect>
-        <x>130</x>
-        <y>480</y>
-        <width>107</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>local</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>250</x>
+        <x>600</x>
         <y>460</y>
-        <width>63</width>
-        <height>20</height>
+        <width>49</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
-       <string>box size</string>
+       <string>Name:</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_multi">
+     <widget class="QLabel" name="prediction_label">
       <property name="geometry">
        <rect>
-        <x>232</x>
+        <x>650</x>
         <y>460</y>
-        <width>91</width>
-        <height>20</height>
+        <width>49</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
@@ -328,7 +234,7 @@ QPushButton:hover{
         <x>19</x>
         <y>9</y>
         <width>981</width>
-        <height>231</height>
+        <height>321</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -369,235 +275,6 @@ QPushButton:hover{
           </widget>
          </item>
         </layout>
-       </item>
-       <item>
-        <widget class="QWidget" name="horizontalWidget_3" native="true">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>50</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <layout class="QHBoxLayout" name="horizontalLayout">
-          <item>
-           <layout class="QVBoxLayout" name="verticalLayout_3">
-            <item>
-             <widget class="QPushButton" name="pushButton_4">
-              <property name="styleSheet">
-               <string notr="true">QPushButton{
-	color:rgb(17,17,17);
-	border-width: 2px;
-	border-radius: 10px;
-	border-bottom-color: rgb(150,150,150);
-	border-right-color: rgb(165,165,165);
-	border-left-color: rgb(165,165,165);
-	border-top-color: rgb(180,180,180);
-	border-style: solid;
-	padding: 4px;
-	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(220, 220, 220, 255), stop:1 rgba(255, 255, 255, 255));
-}
-
-QPushButton:hover{
-	color:rgb(17,17,17);
-	border-width: 1px;
-	border-radius: 10px;
-	padding: 4px;
-	background-color: qlineargradient(spread:pad, x1:0.5, y1:0, x2:0.5, y2:1, stop:0 rgba(220, 220, 220, 255), stop:1 rgba(255, 255, 255, 255));
-}</string>
-              </property>
-              <property name="text">
-               <string>+</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="verticalSpacer">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </item>
-         </layout>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="horizontalLayoutWidget_2">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>350</y>
-        <width>981</width>
-        <height>261</height>
-       </rect>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_4">
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_7">
-         <item>
-          <widget class="QLabel" name="imgmatching">
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QPushButton" name="matchBtn">
-      <property name="geometry">
-       <rect>
-        <x>650</x>
-        <y>280</y>
-        <width>141</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="cursor">
-       <cursorShape>PointingHandCursor</cursorShape>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QPushButton{
-	color:rgb(17,17,17);
-	border-width: 2px;
-	border-radius: 10px;
-	border-bottom-color: rgb(150,150,150);
-	border-right-color: rgb(165,165,165);
-	border-left-color: rgb(165,165,165);
-	border-top-color: rgb(180,180,180);
-	border-style: solid;
-	padding: 4px;
-	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(220, 220, 220, 255), stop:1 rgba(255, 255, 255, 255));
-}
-
-QPushButton:hover{
-	color:rgb(17,17,17);
-	border-width: 1px;
-	border-radius: 10px;
-	padding: 4px;
-	background-color: qlineargradient(spread:pad, x1:0.5, y1:0, x2:0.5, y2:1, stop:0 rgba(220, 220, 220, 255), stop:1 rgba(255, 255, 255, 255));
-}</string>
-      </property>
-      <property name="text">
-       <string>Match</string>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="matchOption">
-      <property name="geometry">
-       <rect>
-        <x>490</x>
-        <y>290</y>
-        <width>121</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color:rgb(81,72,65);
-background: #ffffff;</string>
-      </property>
-      <item>
-       <property name="text">
-        <string>SSD</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Cross Correlation</string>
-       </property>
-      </item>
-     </widget>
-     <widget class="QSlider" name="matchThr1">
-      <property name="geometry">
-       <rect>
-        <x>260</x>
-        <y>280</y>
-        <width>161</width>
-        <height>18</height>
-       </rect>
-      </property>
-      <property name="maximum">
-       <number>20000</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-     <widget class="QSlider" name="matchThr2">
-      <property name="geometry">
-       <rect>
-        <x>260</x>
-        <y>310</y>
-        <width>160</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="maximum">
-       <number>20000</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_4">
-      <property name="geometry">
-       <rect>
-        <x>130</x>
-        <y>280</y>
-        <width>91</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Threshold 1</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_6">
-      <property name="geometry">
-       <rect>
-        <x>130</x>
-        <y>310</y>
-        <width>81</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Threshold 2</string>
-      </property>
-     </widget>
-     <widget class="QWidget" name="verticalLayoutWidget_6">
-      <property name="geometry">
-       <rect>
-        <x>830</x>
-        <y>250</y>
-        <width>126</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <layout class="QVBoxLayout" name="verticalLayout_10">
-       <item>
-        <widget class="QLabel" name="label_7">
-         <property name="text">
-          <string>Computation Time</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLCDNumber" name="matchTime"/>
        </item>
       </layout>
      </widget>
@@ -753,7 +430,7 @@ QPushButton:pressed {
 }</string>
     </property>
     <property name="text">
-     <string>Feat. Matching</string>
+     <string>Roc</string>
     </property>
     <property name="autoDefault">
      <bool>false</bool>
@@ -805,7 +482,7 @@ QPushButton:pressed {
 }</string>
     </property>
     <property name="text">
-     <string>Threshold</string>
+     <string>Face recogntion</string>
     </property>
     <property name="autoDefault">
      <bool>false</bool>
